# ReteaSocializare-ProiectSDA

./: CMakeLists.txt  Dictionary.h  Event.cpp  Event.h  Friend.cpp  Friend.h  Lista.h  Message.cpp  Message.h  Node.h  README.txt  RepoValidator.h  ServiceDictionary.cpp  ServiceDictionary.h  ServiceLista.cpp  ServiceLista.h  Tests.cpp  Tests.h  User.cpp  User.h  UserInterface.cpp  UserInterface.h  Validator.cpp  Validator.h  ValidatorExceptii.h  main.cpp
