cmake_minimum_required(VERSION 3.21)
project(proiect_sda)

set(CMAKE_CXX_STANDARD 14)

add_executable(proiect_sda main.cpp Lista.h Friend.cpp Friend.h User.cpp User.h Message.cpp Message.h Tests.cpp Tests.h Event.cpp Event.h Dictionary.h Node.h ServiceLista.cpp ServiceLista.h UserInterface.cpp UserInterface.h ServiceDictionary.cpp ServiceDictionary.h Validator.cpp Validator.h ValidatorExceptii.h RepoValidator.h)
